[gd_scene load_steps=10 format=3 uid="uid://cf2onnh0u5lny"]

[ext_resource type="Script" path="res://scripts/checkpoint.gd" id="1_rwfgi"]
[ext_resource type="Texture2D" uid="uid://x5t588c7kge4" path="res://Items, UI & effects/Items/Checkpoint/Checkpoint(32 x 32).png" id="2_h6try"]
[ext_resource type="AudioStream" uid="uid://cfjqpkbfdovh5" path="res://sounds/cp_sfx.wav" id="3_56st8"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r3ka1"]
atlas = ExtResource("2_h6try")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o05bv"]
atlas = ExtResource("2_h6try")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mqoi"]
atlas = ExtResource("2_h6try")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_alic0"]
atlas = ExtResource("2_h6try")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3f45q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3ka1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o05bv")
}],
"loop": false,
"name": &"check",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mqoi")
}],
"loop": true,
"name": &"finish",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_alic0")
}],
"loop": true,
"name": &"start",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_widxn"]
size = Vector2(29, 32)

[node name="checkpoint" type="Area2D"]
position = Vector2(0, -16)
collision_layer = 2
script = ExtResource("1_rwfgi")

[node name="anim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_3f45q")
animation = &"start"
autoplay = "start"
speed_scale = 0.4

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_widxn")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(0, -17)

[node name="cp_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_56st8")
pitch_scale = 2.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
